gcc/testsuite/rust/rustc/ui/obsolete-syntax-impl-for-dotdot.rs
trait Trait1 {}
trait Trait2 {}

#[cfg(not_enabled)]
impl Trait1 for .. {}

impl Trait2 for .. {} // { dg-error "" "" { target *-*-* } }

fn main() {}

